--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,6 @@
   "id": "1523266935565585776",
   "api": "1.0.0",
   "main": "dist/code.js",
-  "capabilities": [],
-  "enableProposedApi": false,
-  "documentAccess": "dynamic-page",
   "editorType": ["figma"],
-  "ui": "dist/ui.html",
-  "networkAccess": {
-    "allowedDomains": ["none"]
-  }
+  "ui": "dist/ui.html"
 }
