Update tsconfig typeRoots and include paths
Removed './types' from typeRoots and updated the include path from 'types/**/*.d.ts' to 'type/**/*.d.ts' to reflect changes in directory structure or naming.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es6",
     "lib": ["es6", "dom"],
     "moduleResolution": "node",
-    "typeRoots": ["./node_modules/@types", "./node_modules/@figma", "./types"],
+    "typeRoots": ["./node_modules/@types", "./node_modules/@figma"],
     "jsx": "react-jsx",
     "strict": true,
     "esModuleInterop": true,
@@ -13,6 +13,6 @@
     "allowSyntheticDefaultImports": true,
     "outDir": "./dist"
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "*.config.ts", "types/**/*.d.ts", "webpack.config.js"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "*.config.ts", "type/**/*.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
