--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "react-router-dom": "^7.7.0"
   }
 }
